--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
         # build: 
         #     context: ./broker
         #     dockerfile: Dockerfile
-        # environment: 
-            # RABBITMQ_ERLANG_COOKIE: '6085e2412b6fa88647466c6a81c0cea0'
+        environment: 
+            RABBITMQ_ERLANG_COOKIE: '6085e2412b6fa88647466c6a81c0cea0'
         networks: 
             - poc
         ports:
