chore(dockerfile): Start rabbitmq using supervisord

--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -4,7 +4,7 @@
 #
 ARG RABBIT_VERSION=3.8.3
 
-FROM rabbitmq:${RABBIT_VERSION}-management
+FROM rabbitmq:${RABBIT_VERSION}-management-alpine
 
 RUN apk add \
     tini=0.18.0-r0 \
@@ -17,9 +17,10 @@ COPY config/rabbitmq-env.conf /etc/rabbitmq/rabbitmq-env.conf
 COPY config/rabbitmq-modified.conf /etc/rabbitmq/rabbitmq-modified.conf
 COPY config/rabbitmq-definitions.json /etc/rabbitmq/rabbitmq-definitions.json
 COPY scripts/start-rabbitmq-management.sh /usr/bin/start-rabbitmq-management.sh
+COPY supervisord/supervisord.conf /etc/supervisor/supervisord.conf
 
 
 RUN dos2unix /usr/bin/start-rabbitmq-management.sh
 RUN chmod +x /usr/bin/start-rabbitmq-management.sh
 
-# CMD ["rabbitmq-server"]
+ENTRYPOINT ["/sbin/tini", "--", "/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
