--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3'
+version: '3.7'
 
 networks:
-    default:
-      external:
-        name: servicenetwork
+    internal:
+      external: false # Create the volume if it doesn't exist
+      name: servicenetwork
 
 services:
     rabbitmq1:
         hostname: rabbitmq1
+        container_name: rabbitmq1
         image: microservices/rabbitmq
         build: 
             context: ./rabbitmq
@@ -25,12 +26,15 @@ services:
             - "15672:15672"
             - "25672:25672"
             - "61613:61613"
+        networks: 
+            - internal
         volumes:
             - "./data/logs/rabbit-node-one:/var/log/rabbitmq:rw"
             - "./data/rabbit-node-one:/var/lib/rabbitmq/mnesia:rw"
 
     rabbitmq2:
         hostname: rabbitmq2
+        container_name: rabbitmq2
         image: microservices/rabbitmq
         build: 
             context: ./rabbitmq
@@ -40,6 +44,8 @@ services:
             RABBITMQ_NODENAME: rabbitmq2
         depends_on: 
             - rabbitmq1
+        networks: 
+            - internal
         volumes:
             - "./data/logs/rabbit-node-two:/var/log/rabbitmq:rw"
             - "./data/rabbit-node-two:/var/lib/rabbitmq/mnesia:rw"
