--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         cap_add:
             - ALL
         environment: 
+            RABBITMQ_ERLANG_COOKIE: "6085e2412b6fa88647466c6a81c0cea0"
             RABBITMQ_NODENAME: rabbitmq-master
         ports:
             - "4369:4369"
@@ -39,6 +40,7 @@ services:
             context: ./rabbitmq
             dockerfile: Dockerfile
         environment: 
+            RABBITMQ_ERLANG_COOKIE: "6085e2412b6fa88647466c6a81c0cea0"
             RABBITMQ_NODENAME: rabbitmq-slave
         depends_on: 
             - rabbitmq-master
